--- a/main.html
+++ b/main.html
@@ -3,10 +3,34 @@
 <html>
 
 <head>
+	 <title>Trivia Quiz</title>
+    <style>
+        blockquote {
+            max-width: 600px;
+            margin: 10px;
+            padding: 15px;
+            border-left: 8px solid green;
+            background-color: #f8fffe;
+            font-weight: bold;
+        }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	  <h2>What is the captial of India?</h2>
+
+    <form>
+        <input type="radio" name="capital" id="delhi">
+        <label for="delhi">New Delhi</label><br>
+
+        <input type="radio" name="capital" id="mumbai">
+        <label for="mumbai">Mumbai</label>
+    </form>
+
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+        "New Delhi is the capital of India and an administrative district of NCT Delhi."
+    </blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
